styled about and contact pages

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,20 @@
 body {
     margin: 0 auto;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    background-color: rgba(199, 157, 108, 0.418);
 }
 
 header {
     position: sticky;
     top: 20px;
+    z-index: 1;
 }
 
 .nav-bar {
     height: 70px;
     width: 100%;
     background-color:rgb(0,114,80,.7);
-    display: inline-block;
 }
 
 .logo {
@@ -24,41 +27,109 @@ header {
     list-style-type: none;
 }
 
-}
 .list-items {
-    display: inline-block;
-    padding: 3px;
-    text-decoration: none;
+    float: left;
+    margin-right: 25px;
+    padding: 5px;
     background-color: #daa520;
-    margin-right: 20px;
     border: 3px solid rgb(255, 255, 255);
     border-radius: 6px;
-    color: green;
-}
-
-.list-item a {
-    text-decoration: none;
-}
-
-.list-item:hover {
-    color: white;
-}
-
-.list-item a:visited {
     color: black;
 }
 
+a:link {
+    text-decoration: none;
+  }
+  
+a:visited {
+    text-decoration: none;
+  }
+  
+ a:hover {
+    text-decoration: underline;
+  }
+  
+ a:active {
+    text-decoration: underline;
+  }
+
 img {
-    height; 700px;
-    width: 100%;
-    /* background-image: url("../img/Zorro1.jpg"); */
     background-size: cover;
 }
 
-.heading {
+.banner-text {
+    height: 60px;
+    width: 280px;
     position: absolute;
     top: 50%;
     left: 50%;
     right: 50%;
     bottom: 50%;
+    padding-left: 17px;
+    padding-top: 17px;
+    font-family: 'Esteban', serif;
+    background-color: grey;
+    border: 3px solid goldenrod;
+}
+
+.column {
+    background-color: black;
+    border: 3px solid red;
+    height: 650px;
+    width: 47%;
+    float: left;
+    margin-left: 25px;
+}
+
+.box {
+    height: 280px;
+    width: 600px;
+    border: 3px solid green;
+    margin-left: 50px;
+    margin-top: 25px;
+}
+
+.tornado {
+    height: 280px;
+    width: 100%;
+}
+
+.mistress {
+    height: 240px;
+    width: 80%;
+    padding-left: 60px;
+    padding-top: 20px;
+}
+
+.column p {
+    padding: 70px;
+    line-height: 1.1;
+    color: white;
+}
+
+.footer {
+    height: 70px;
+    width: 100%;
+    /* position: relative;
+    top: 1300px; */
+    background-color:rgb(0,114,80,.7);
+    clear: both;
+}
+
+.footer-col {
+    height: 70px;
+    width: 32%;
+    float: left;
+    margin-top: 25px;
+    margin-left: 5px;
+    text-align: center;
+}
+
+.button {
+    height: 20px;
+    width: 60px;
+}
+
+.fa-twitter-square {
+    color: #00acee;
 }
