--- a/css/contact.css
+++ b/css/contact.css
@@ -36,3 +36,11 @@ label {
     height: 100px;
     width: 75%;
 }
+
+.map {
+    height: 450px;
+    width: 600px;
+    margin-top: 10px;
+    margin-left: 30%;
+    margin-bottom: 10px;
+}
